# D2Q9FluidSimulation

./: .clang-format  .clang-tidy  .control.sh  .doxyfile  .gitignore  2DGLBM.ipynb  CMakeLists.txt  README.md  gmon.out
StudyNotes/: LBMTest.ipynb  LatticeBoltzmannMethod.ipynb  Utils.jl
StudyNotes/.ipynb_checkpoints/: LatticeBoltzmannMethod-checkpoint.ipynb
resources/: 2DGLBM(deprecated).ipynb  LBMStudyCode.ipynb  LatticeBoltzmannMethodStudyNote.ipynb
src/: CMakeLists.txt  LatticeApplication.cpp  LatticeApplication.h  LatticeBoltzmannMethod.cpp  LatticeBoltzmannMethod.h  LatticeMainWindow.cpp  LatticeMainWindow.h  README.md  main.cpp
src/core/: CartesianMatrix.hpp  HeatMap.hpp  LatticeBoltzmannMethod.cpp  LatticeBoltzmannMethod.h  LatticeBoltzmannMethodD2Q9.cpp  LatticeBoltzmannMethodD2Q9.h  Matrix.hpp  OpenCLMain.hpp
src/core/LatticeBoltzmannMethod/: D2Q9.cpp  D2Q9.h
test/: CMakeLists.txt
test/core/: CartesianMatrixBenchmark.cpp  CartesianMatrixTest.cpp  LatticeBoltzmannMethodD2Q9Benchmark.cpp  LatticeBoltzmannMethodD2Q9Test.cpp  MainBenchmark.cpp  MatrixBenchmark.cpp  MatrixTest.cpp  OpenCLMainBenchmark.cpp  OpenCLMainTest.cpp
