find_package(GTest REQUIRED)
add_executable(MainTests core/CartesianMatrixTest.cpp)
target_link_libraries(MainTests GTest::gtest_main)
target_link_libraries(MainTests GTest::gtest)
target_link_libraries(MainTests GTest::gmock)
target_compile_options(MainTests PRIVATE --coverage)
target_link_options(MainTests PRIVATE --coverage)

find_package(benchmark REQUIRED)
add_executable(MainBenchmarks core/CartesianMatrixBenchmark.cpp)
target_link_libraries(MainBenchmarks benchmark::benchmark_main)
target_link_libraries(MainBenchmarks benchmark::benchmark)
